[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.39.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"] # Errori, Flakes, Bug, Import ordinati

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true